css/index.css
.home {
    background: url(../img/index_background_home.jpg) no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    background-color: #cccccc;

}

.about {
    background: url(../img/index_background_about.jpg) no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    background-color: #cccccc;

}

.portfolio {
    background: url(../img/index_background_portfolio.jpg) no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    background-color: #cccccc;
    padding-top: 30px;

}

.contact {
    background: url(../img/index_background_contact.jpg) no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    background-color: #cccccc;

}

.about-text{
    color: #5e5e5e;
}

.row-content {
    height: 100vh;
}



.social-buttons {
    text-align: center;
    padding-top: 10%;
}

h1 {
    text-align: center;
    padding-top: 10%;
    color: #dbdbdb;
}

h3 {
    color: #dbdbdb;
}

.img-thumbnail {
    width: 55%;

}

